@@ -9,3 +9,12 @@ Also try Terraria!
 Please don't try Undermagic!
 Spinjitzu!
 Ninjago in Minecraft!
+Kai!
+Zane!
+Lloyd!
+Nya!
+Jay!
+Cole!
+Master Wu!
+Ninja, Go!
+Ninja's, Go!... To the polls!
