@@ -1,6 +1,7 @@
 {
+	"texture_size": [256, 256],
 	"textures": {
-		"base": "spin:model/spinjitzu_tornado"
+		"base": "spin:model/earth_tornado"
 	},
 	"elements": [
 		{
@@ -8,12 +9,12 @@
 			"to": [12.5, 3, 12.5],
 			"rotation": {"angle": 0, "axis": "y", "origin": [3.5, 0, 3.5]},
 			"faces": {
-				"north": {"uv": [7.625, 8.625, 8.75, 9.25], "texture": "#base"},
-				"east": {"uv": [6.5, 8.625, 7.625, 9.25], "texture": "#base"},
-				"south": {"uv": [9.875, 8.625, 11, 9.25], "texture": "#base"},
-				"west": {"uv": [8.75, 8.625, 9.875, 9.25], "texture": "#base"},
-				"up": {"uv": [8.75, 8.625, 7.625, 7.5], "texture": "#base"},
-				"down": {"uv": [9.875, 7.5, 8.75, 8.625], "texture": "#base"}
+				"north": {"uv": [3.8125, 4.3125, 4.375, 4.625], "texture": "#base"},
+				"east": {"uv": [3.25, 4.3125, 3.8125, 4.625], "texture": "#base"},
+				"south": {"uv": [4.9375, 4.3125, 5.5, 4.625], "texture": "#base"},
+				"west": {"uv": [4.375, 4.3125, 4.9375, 4.625], "texture": "#base"},
+				"up": {"uv": [4.375, 4.3125, 3.8125, 3.75], "texture": "#base"},
+				"down": {"uv": [4.9375, 3.75, 4.375, 4.3125], "texture": "#base"}
 			}
 		},
 		{
@@ -21,12 +22,12 @@
 			"to": [14.5, 10, 14.5],
 			"rotation": {"angle": 0, "axis": "y", "origin": [3.5, 0, 3.5]},
 			"faces": {
-				"north": {"uv": [1.625, 8.875, 3.25, 9.75], "texture": "#base"},
-				"east": {"uv": [0, 8.875, 1.625, 9.75], "texture": "#base"},
-				"south": {"uv": [4.875, 8.875, 6.5, 9.75], "texture": "#base"},
-				"west": {"uv": [3.25, 8.875, 4.875, 9.75], "texture": "#base"},
-				"up": {"uv": [3.25, 8.875, 1.625, 7.25], "texture": "#base"},
-				"down": {"uv": [4.875, 7.25, 3.25, 8.875], "texture": "#base"}
+				"north": {"uv": [0.8125, 4.4375, 1.625, 4.875], "texture": "#base"},
+				"east": {"uv": [0, 4.4375, 0.8125, 4.875], "texture": "#base"},
+				"south": {"uv": [2.4375, 4.4375, 3.25, 4.875], "texture": "#base"},
+				"west": {"uv": [1.625, 4.4375, 2.4375, 4.875], "texture": "#base"},
+				"up": {"uv": [1.625, 4.4375, 0.8125, 3.625], "texture": "#base"},
+				"down": {"uv": [2.4375, 3.625, 1.625, 4.4375], "texture": "#base"}
 			}
 		},
 		{
@@ -34,12 +35,12 @@
 			"to": [16.5, 19, 16.5],
 			"rotation": {"angle": 0, "axis": "y", "origin": [3.5, 0, 3.5]},
 			"faces": {
-				"north": {"uv": [2.125, 6.125, 4.25, 7.25], "texture": "#base"},
-				"east": {"uv": [0, 6.125, 2.125, 7.25], "texture": "#base"},
-				"south": {"uv": [6.375, 6.125, 8.5, 7.25], "texture": "#base"},
-				"west": {"uv": [4.25, 6.125, 6.375, 7.25], "texture": "#base"},
-				"up": {"uv": [4.25, 6.125, 2.125, 4], "texture": "#base"},
-				"down": {"uv": [6.375, 4, 4.25, 6.125], "texture": "#base"}
+				"north": {"uv": [1.0625, 3.0625, 2.125, 3.625], "texture": "#base"},
+				"east": {"uv": [0, 3.0625, 1.0625, 3.625], "texture": "#base"},
+				"south": {"uv": [3.1875, 3.0625, 4.25, 3.625], "texture": "#base"},
+				"west": {"uv": [2.125, 3.0625, 3.1875, 3.625], "texture": "#base"},
+				"up": {"uv": [2.125, 3.0625, 1.0625, 2], "texture": "#base"},
+				"down": {"uv": [3.1875, 2, 2.125, 3.0625], "texture": "#base"}
 			}
 		},
 		{
@@ -47,12 +48,12 @@
 			"to": [16.5, 32, 16.5],
 			"rotation": {"angle": 0, "axis": "y", "origin": [3.5, 0, 3.5]},
 			"faces": {
-				"north": {"uv": [8.5, 7.25, 10.625, 7.5], "texture": "#base"},
-				"east": {"uv": [6.375, 7.25, 8.5, 7.5], "texture": "#base"},
-				"south": {"uv": [12.75, 7.25, 14.875, 7.5], "texture": "#base"},
-				"west": {"uv": [10.625, 7.25, 12.75, 7.5], "texture": "#base"},
-				"up": {"uv": [10.625, 7.25, 8.5, 5.125], "texture": "#base"},
-				"down": {"uv": [12.75, 5.125, 10.625, 7.25], "texture": "#base"}
+				"north": {"uv": [4.25, 3.625, 5.3125, 3.75], "texture": "#base"},
+				"east": {"uv": [3.1875, 3.625, 4.25, 3.75], "texture": "#base"},
+				"south": {"uv": [6.375, 3.625, 7.4375, 3.75], "texture": "#base"},
+				"west": {"uv": [5.3125, 3.625, 6.375, 3.75], "texture": "#base"},
+				"up": {"uv": [5.3125, 3.625, 4.25, 2.5625], "texture": "#base"},
+				"down": {"uv": [6.375, 2.5625, 5.3125, 3.625], "texture": "#base"}
 			}
 		},
 		{
@@ -60,13 +61,241 @@
 			"to": [18.5, 30, 18.5],
 			"rotation": {"angle": 0, "axis": "y", "origin": [3.5, 0, 3.5]},
 			"faces": {
-				"north": {"uv": [2.625, 2.625, 5.25, 4], "texture": "#base"},
-				"east": {"uv": [0, 2.625, 2.625, 4], "texture": "#base"},
-				"south": {"uv": [7.875, 2.625, 10.5, 4], "texture": "#base"},
-				"west": {"uv": [5.25, 2.625, 7.875, 4], "texture": "#base"},
-				"up": {"uv": [5.25, 2.625, 2.625, 0], "texture": "#base"},
-				"down": {"uv": [7.875, 0, 5.25, 2.625], "texture": "#base"}
+				"north": {"uv": [1.3125, 1.3125, 2.625, 2], "texture": "#base"},
+				"east": {"uv": [0, 1.3125, 1.3125, 2], "texture": "#base"},
+				"south": {"uv": [3.9375, 1.3125, 5.25, 2], "texture": "#base"},
+				"west": {"uv": [2.625, 1.3125, 3.9375, 2], "texture": "#base"},
+				"up": {"uv": [2.625, 1.3125, 1.3125, 0], "texture": "#base"},
+				"down": {"uv": [3.9375, 0, 2.625, 1.3125], "texture": "#base"}
 			}
+		},
+		{
+			"from": [3.5, -2, 3.5],
+			"to": [12.5, 3, 12.5],
+			"rotation": {"angle": 22.5, "axis": "y", "origin": [8, 0.5, 8]},
+			"faces": {
+				"north": {"uv": [11.8125, 4.3125, 12.375, 4.625], "texture": "#base"},
+				"east": {"uv": [11.25, 4.3125, 11.8125, 4.625], "texture": "#base"},
+				"south": {"uv": [12.9375, 4.3125, 13.5, 4.625], "texture": "#base"},
+				"west": {"uv": [12.375, 4.3125, 12.9375, 4.625], "texture": "#base"},
+				"up": {"uv": [12.375, 4.3125, 11.8125, 3.75], "texture": "#base"},
+				"down": {"uv": [12.9375, 3.75, 12.375, 4.3125], "texture": "#base"}
+			}
+		},
+		{
+			"from": [1.5, 3, 1.5],
+			"to": [14.5, 10, 14.5],
+			"rotation": {"angle": -22.5, "axis": "y", "origin": [8, 6.5, 8]},
+			"faces": {
+				"north": {"uv": [8.8125, 4.4375, 9.625, 4.875], "texture": "#base"},
+				"east": {"uv": [8, 4.4375, 8.8125, 4.875], "texture": "#base"},
+				"south": {"uv": [10.4375, 4.4375, 11.25, 4.875], "texture": "#base"},
+				"west": {"uv": [9.625, 4.4375, 10.4375, 4.875], "texture": "#base"},
+				"up": {"uv": [9.625, 4.4375, 8.8125, 3.625], "texture": "#base"},
+				"down": {"uv": [10.4375, 3.625, 9.625, 4.4375], "texture": "#base"}
+			}
+		},
+		{
+			"from": [-0.5, 10, -0.5],
+			"to": [16.5, 19, 16.5],
+			"rotation": {"angle": 22.5, "axis": "y", "origin": [8, 14.5, 8]},
+			"faces": {
+				"north": {"uv": [9.0625, 3.0625, 10.125, 3.625], "texture": "#base"},
+				"east": {"uv": [8, 3.0625, 9.0625, 3.625], "texture": "#base"},
+				"south": {"uv": [11.1875, 3.0625, 12.25, 3.625], "texture": "#base"},
+				"west": {"uv": [10.125, 3.0625, 11.1875, 3.625], "texture": "#base"},
+				"up": {"uv": [10.125, 3.0625, 9.0625, 2], "texture": "#base"},
+				"down": {"uv": [11.1875, 2, 10.125, 3.0625], "texture": "#base"}
+			}
+		},
+		{
+			"from": [-0.5, 30, -0.5],
+			"to": [16.5, 32, 16.5],
+			"rotation": {"angle": -22.5, "axis": "y", "origin": [8, 31, 8]},
+			"faces": {
+				"north": {"uv": [12.25, 3.625, 13.3125, 3.75], "texture": "#base"},
+				"east": {"uv": [11.1875, 3.625, 12.25, 3.75], "texture": "#base"},
+				"south": {"uv": [14.375, 3.625, 15.4375, 3.75], "texture": "#base"},
+				"west": {"uv": [13.3125, 3.625, 14.375, 3.75], "texture": "#base"},
+				"up": {"uv": [13.3125, 3.625, 12.25, 2.5625], "texture": "#base"},
+				"down": {"uv": [14.375, 2.5625, 13.3125, 3.625], "texture": "#base"}
+			}
+		},
+		{
+			"from": [-2.5, 19, -2.5],
+			"to": [18.5, 30, 18.5],
+			"rotation": {"angle": -22.5, "axis": "y", "origin": [8, 24.5, 8]},
+			"faces": {
+				"north": {"uv": [9.3125, 1.3125, 10.625, 2], "texture": "#base"},
+				"east": {"uv": [8, 1.3125, 9.3125, 2], "texture": "#base"},
+				"south": {"uv": [11.9375, 1.3125, 13.25, 2], "texture": "#base"},
+				"west": {"uv": [10.625, 1.3125, 11.9375, 2], "texture": "#base"},
+				"up": {"uv": [10.625, 1.3125, 9.3125, 0], "texture": "#base"},
+				"down": {"uv": [11.9375, 0, 10.625, 1.3125], "texture": "#base"}
+			}
+		},
+		{
+			"from": [3.5, -2, 3.5],
+			"to": [12.5, 3, 12.5],
+			"rotation": {"angle": 45, "axis": "y", "origin": [8, 0.5, 8]},
+			"faces": {
+				"north": {"uv": [3.8125, 12.3125, 4.375, 12.625], "texture": "#base"},
+				"east": {"uv": [3.25, 12.3125, 3.8125, 12.625], "texture": "#base"},
+				"south": {"uv": [4.9375, 12.3125, 5.5, 12.625], "texture": "#base"},
+				"west": {"uv": [4.375, 12.3125, 4.9375, 12.625], "texture": "#base"},
+				"up": {"uv": [4.375, 12.3125, 3.8125, 11.75], "texture": "#base"},
+				"down": {"uv": [4.9375, 11.75, 4.375, 12.3125], "texture": "#base"}
+			}
+		},
+		{
+			"from": [1.5, 3, 1.5],
+			"to": [14.5, 10, 14.5],
+			"rotation": {"angle": -45, "axis": "y", "origin": [8, 6.5, 8]},
+			"faces": {
+				"north": {"uv": [0.8125, 12.4375, 1.625, 12.875], "texture": "#base"},
+				"east": {"uv": [0, 12.4375, 0.8125, 12.875], "texture": "#base"},
+				"south": {"uv": [2.4375, 12.4375, 3.25, 12.875], "texture": "#base"},
+				"west": {"uv": [1.625, 12.4375, 2.4375, 12.875], "texture": "#base"},
+				"up": {"uv": [1.625, 12.4375, 0.8125, 11.625], "texture": "#base"},
+				"down": {"uv": [2.4375, 11.625, 1.625, 12.4375], "texture": "#base"}
+			}
+		},
+		{
+			"from": [-0.5, 10, -0.5],
+			"to": [16.5, 19, 16.5],
+			"rotation": {"angle": 45, "axis": "y", "origin": [8, 14.5, 8]},
+			"faces": {
+				"north": {"uv": [1.0625, 11.0625, 2.125, 11.625], "texture": "#base"},
+				"east": {"uv": [0, 11.0625, 1.0625, 11.625], "texture": "#base"},
+				"south": {"uv": [3.1875, 11.0625, 4.25, 11.625], "texture": "#base"},
+				"west": {"uv": [2.125, 11.0625, 3.1875, 11.625], "texture": "#base"},
+				"up": {"uv": [2.125, 11.0625, 1.0625, 10], "texture": "#base"},
+				"down": {"uv": [3.1875, 10, 2.125, 11.0625], "texture": "#base"}
+			}
+		},
+		{
+			"from": [-0.5, 30, -0.5],
+			"to": [16.5, 32, 16.5],
+			"rotation": {"angle": 45, "axis": "y", "origin": [8, 31, 8]},
+			"faces": {
+				"north": {"uv": [4.25, 11.625, 5.3125, 11.75], "texture": "#base"},
+				"east": {"uv": [3.1875, 11.625, 4.25, 11.75], "texture": "#base"},
+				"south": {"uv": [6.375, 11.625, 7.4375, 11.75], "texture": "#base"},
+				"west": {"uv": [5.3125, 11.625, 6.375, 11.75], "texture": "#base"},
+				"up": {"uv": [5.3125, 11.625, 4.25, 10.5625], "rotation": 90, "texture": "#base"},
+				"down": {"uv": [6.375, 10.5625, 5.3125, 11.625], "rotation": 270, "texture": "#base"}
+			}
+		},
+		{
+			"from": [-2.5, 19, -2.5],
+			"to": [18.5, 30, 18.5],
+			"rotation": {"angle": 45, "axis": "y", "origin": [8, 24.5, 8]},
+			"faces": {
+				"north": {"uv": [1.3125, 9.3125, 2.625, 10], "texture": "#base"},
+				"east": {"uv": [0, 9.3125, 1.3125, 10], "texture": "#base"},
+				"south": {"uv": [3.9375, 9.3125, 5.25, 10], "texture": "#base"},
+				"west": {"uv": [2.625, 9.3125, 3.9375, 10], "texture": "#base"},
+				"up": {"uv": [2.625, 9.3125, 1.3125, 8], "rotation": 90, "texture": "#base"},
+				"down": {"uv": [3.9375, 8, 2.625, 9.3125], "rotation": 270, "texture": "#base"}
+			}
+		},
+		{
+			"from": [3.5, -2, 3.5],
+			"to": [12.5, 3, 12.5],
+			"shade": false,
+			"rotation": {"angle": -22.5, "axis": "y", "origin": [8, 0.5, 8]},
+			"faces": {
+				"north": {"uv": [12.375, 12.3125, 11.8125, 12.625], "texture": "#base"},
+				"east": {"uv": [12.9375, 12.3125, 12.375, 12.625], "texture": "#base"},
+				"south": {"uv": [13.5, 12.3125, 12.9375, 12.625], "texture": "#base"},
+				"west": {"uv": [11.8125, 12.3125, 11.25, 12.625], "texture": "#base"},
+				"up": {"uv": [11.8125, 12.3125, 12.375, 11.75], "rotation": 270, "texture": "#base"},
+				"down": {"uv": [12.375, 11.75, 12.9375, 12.3125], "rotation": 90, "texture": "#base"}
+			}
+		},
+		{
+			"from": [1.5, 3, 1.5],
+			"to": [14.5, 10, 14.5],
+			"rotation": {"angle": 0, "axis": "y", "origin": [8, 6.5, 8]},
+			"faces": {
+				"north": {"uv": [8.8125, 12.4375, 9.625, 12.875], "texture": "#base"},
+				"east": {"uv": [8, 12.4375, 8.8125, 12.875], "texture": "#base"},
+				"south": {"uv": [10.4375, 12.4375, 11.25, 12.875], "texture": "#base"},
+				"west": {"uv": [9.625, 12.4375, 10.4375, 12.875], "texture": "#base"},
+				"up": {"uv": [9.625, 12.4375, 8.8125, 11.625], "texture": "#base"},
+				"down": {"uv": [10.4375, 11.625, 9.625, 12.4375], "texture": "#base"}
+			}
+		},
+		{
+			"from": [-0.5, 10, -0.5],
+			"to": [16.5, 19, 16.5],
+			"rotation": {"angle": 22.5, "axis": "y", "origin": [8, 14.5, 8]},
+			"faces": {
+				"north": {"uv": [9.0625, 11.0625, 10.125, 11.625], "texture": "#base"},
+				"east": {"uv": [8, 11.0625, 9.0625, 11.625], "texture": "#base"},
+				"south": {"uv": [11.1875, 11.0625, 12.25, 11.625], "texture": "#base"},
+				"west": {"uv": [10.125, 11.0625, 11.1875, 11.625], "texture": "#base"},
+				"up": {"uv": [10.125, 11.0625, 9.0625, 10], "texture": "#base"},
+				"down": {"uv": [11.1875, 10, 10.125, 11.0625], "texture": "#base"}
+			}
+		},
+		{
+			"from": [-0.5, 30, -0.5],
+			"to": [16.5, 32, 16.5],
+			"rotation": {"angle": -22.5, "axis": "y", "origin": [8, 31, 8]},
+			"faces": {
+				"north": {"uv": [12.25, 11.625, 13.3125, 11.75], "texture": "#base"},
+				"east": {"uv": [11.1875, 11.625, 12.25, 11.75], "texture": "#base"},
+				"south": {"uv": [14.375, 11.625, 15.4375, 11.75], "texture": "#base"},
+				"west": {"uv": [13.3125, 11.625, 14.375, 11.75], "texture": "#base"},
+				"up": {"uv": [13.3125, 11.625, 12.25, 10.5625], "texture": "#base"},
+				"down": {"uv": [14.375, 10.5625, 13.3125, 11.625], "texture": "#base"}
+			}
+		},
+		{
+			"from": [-2.5, 19, -2.5],
+			"to": [18.5, 30, 18.5],
+			"rotation": {"angle": -22.5, "axis": "y", "origin": [8, 24.5, 8]},
+			"faces": {
+				"north": {"uv": [9.3125, 9.3125, 10.625, 10], "texture": "#base"},
+				"east": {"uv": [8, 9.3125, 9.3125, 10], "texture": "#base"},
+				"south": {"uv": [11.9375, 9.3125, 13.25, 10], "texture": "#base"},
+				"west": {"uv": [10.625, 9.3125, 11.9375, 10], "texture": "#base"},
+				"up": {"uv": [10.625, 9.3125, 9.3125, 8], "texture": "#base"},
+				"down": {"uv": [11.9375, 8, 10.625, 9.3125], "texture": "#base"}
+			}
+		}
+	],
+	"display": {
+		"head": {
+			"translation": [0, -29.7, 0],
+			"scale": [1.6, 1.6, 1.6]
+		}
+	},
+	"groups": [
+		{
+			"name": "Frame1",
+			"origin": [3.5, 0, 3.5],
+			"color": 0,
+			"children": [0, 1, 2, 3, 4]
+		},
+		{
+			"name": "Frame2",
+			"origin": [3.5, 0, 3.5],
+			"color": 0,
+			"children": [5, 6, 7, 8, 9]
+		},
+		{
+			"name": "Frame3",
+			"origin": [3.5, 0, 3.5],
+			"color": 0,
+			"children": [10, 11, 12, 13, 14]
+		},
+		{
+			"name": "Frame4",
+			"origin": [3.5, 0, 3.5],
+			"color": 0,
+			"children": [15, 16, 17, 18, 19]
 		}
 	]
 }
